--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>WebRTC Atos | Front</title>
         <style>
      iframe{
                 height: 500px;
